# saavy_dsp

./: .gitignore  Cargo.toml  LICENSE  README.md  WHY.md
.github/: claude-review.yaml
.github/workflows/: claude-code-review.yml
benches/: dsp_bench.rs
benches/dsp/: amplify.rs  delay.rs  distortion.rs  envelope.rs  filter.rs  mix.rs  mod.rs  oscillator.rs  reverb.rs
benches/scenarios/: mix.rs  mod.rs  voices.rs
docs/: HANDOFF.md
docs/design/: pattern-api.md  tui.md
examples/: arabesque.rs  cpal_demo.rs  cpal_scope.rs  dubstep.rs  envelope_demo.rs  fluent_demo.rs  graph_basics.rs  lofi.rs  metronome_sketch.rs  offline_bounce.rs  oscilloscope.rs  pattern_player.rs  polyphony_demo.rs  simple_poly.rs  synthwave.rs  techno.rs
src/: lib.rs
src/dsp/: amplify.rs  delay.rs  distortion.rs  envelope.rs  filter.rs  lfo.rs  mix.rs  mod.rs  modulate.rs  oscillator.rs  reverb.rs  through.rs
src/dsp_fluent/: amplify.rs  envelope_node.rs  mod.rs  node_extension.rs  oscillator_node.rs  voice_node.rs
src/engine/: allocator.rs  mod.rs  scheduler.rs
src/graph/: amplify.rs  chorus.rs  delay.rs  distortion.rs  envelope.rs  extensions.rs  filter.rs  lfo.rs  mix.rs  mod.rs  modulate.rs  node.rs  oscillator.rs  reverb.rs  through.rs
src/io/: converter.rs  midi.rs  mod.rs
src/patch/: mod.rs
src/runtime/: app.rs  mod.rs  sequencer.rs  track.rs
src/runtime/ui/: timeline.rs
src/sequencing/: duration.rs  mod.rs  notes.rs  pattern.rs  sequence.rs  time_signature.rs
src/synth/: factory.rs  message.rs  mod.rs  poly.rs  synth.rs  voice.rs
src/tooling/: cli.rs
src/voices/: bass.rs  clap.rs  crash.rs  hihat.rs  kick.rs  lead.rs  mod.rs  openhat.rs  pad.rs  pluck.rs  ride.rs  snare.rs  tom.rs
tests/: audio_regression.rs
