[package]
name = "saavy_dsp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Low-level, realtime-safe DSP primitives for musical sound"
repository = "https://example.com/saavy_dsp"

[lib]
name = "saavy_dsp"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde"]
rtrb = ["dep:rtrb"]

[dependencies]
rtrb = { version = "0.3.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
cpal = "0.15"
rustfft = "6"

[build-dependencies]
