[package]
name = "saavy_dsp"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Low-level, realtime-safe DSP primitives for musical sound"
repository = "https://github.com/saavylab/saavy_dsp"

[lib]
name = "saavy_dsp"
crate-type = ["rlib"]

[features]
default = ["rtrb"]
serde = ["dep:serde"]
rtrb = ["dep:rtrb"]

[dependencies]
rtrb = { version = "0.3.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
cpal = "0.15"
rustfft = "6"

[build-dependencies]
